Clean up code and make it more readable
This includes removing unused imports, adding access modifier to instance variables, simplifying code segments (without additional refactoring)